--- a/src/app/create-dispatch-area/create-dispatch-area.component.html
+++ b/src/app/create-dispatch-area/create-dispatch-area.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-8">
         <!-- First and Second Column for the Form -->
         <!-- <div class="col-md-8"> -->
-          <p><b>Create Dispatch Area</b></p>
+          <h4>Create Dispatch Area</h4>
           <form [formGroup]="createDispatch"> 
             <div class="row">
                 <div class="col-md-6">
@@ -57,7 +57,7 @@
                     <div class="mb-3">
                         <label for="addLocationFile" class="form-label">Add Location File</label>
                         <div class="input-group">
-                          <label for="mlGeoJSONFile" style="margin-top: 10px;margin-left: 5px;">Add ML/Geo JSON File</label>
+                          <label for="mlGeoJSONFile" style="margin-top: 12px;margin-left: 5px;">Add ML/Geo JSON File</label>
                           <input lntds-text-box type="text" class = "form-control" formControlName="mlGeoJSONFile" id= "mlGeoJSONFile" name="mlGeoJSONFile" placeholder=" Add URL " style="margin-left : 10px;margin-top: 5px; margin-bottom:5px; border: 1px solid #C1BDBD; background : #FFF;">
                           <input type="file" class="form-control" formControlName="browseFile" id="browseFile" name="browseFile" style="display: none;">
                           <div class="input-group-append">
@@ -166,7 +166,7 @@
 
         <!-- Third Column for the Image -->
         <div class="col-md-12">
-        <div style="background-color: aqua; height: 41px;"></div>
+        <div style="background-color: whitesmoke; height: 41px;"></div>
           <img src="https://via.placeholder.com/1200x800" style="height: 900px;" alt="Image Placeholder" class="img-fluid">
         </div>
       </div>
