--- a/src/app/create-dispatch-area/create-dispatch-area.component.css
+++ b/src/app/create-dispatch-area/create-dispatch-area.component.css
@@ -6,9 +6,18 @@
     display: inline-block;
     width: 8rem;
 }
-p{
+h4{
     margin-left: 3px;
     margin-top: 20px;
+}
+
+label{
+    color: #000;
+    font-family: Roboto;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 ::placeholder{
