--- a/src/app/add-division/add-division.component.html
+++ b/src/app/add-division/add-division.component.html
@@ -3,7 +3,7 @@
       <div class="col-md-8">
         <!-- First and Second Column for the Form -->
         <!-- <div class="col-md-8"> -->
-          <h4>Create Dispatch Area</h4>
+          <h4>Add Division</h4>
           <form [formGroup]="addDivision"> 
             <div class="row">
                 <div class="col-md-6">
